--- a/Examples/Stereo/EuRoC.yaml
+++ b/Examples/Stereo/EuRoC.yaml
@@ -33,6 +33,25 @@ Camera.RGB: 1
 # Close/Far threshold. Baseline times.
 ThDepth: 35.0
 
+iGPS.Path: "../../data/MH01/MH01-iGPS-Direction.txt"
+iGPS.Channel: 1
+iGPS.RotationSpeed: 1800
+Twi: !!opencv-matrix
+   rows: 4
+   cols: 4
+   dt: f
+   data: [1.0, 0.0, 0.0, 0.0,
+          0.0, 1.0, 0.0, 0.0,
+          0.0, 0.0, 1.0, 0.0,
+          0.0, 0.0, 0.0, 1.0]
+Twi2: !!opencv-matrix
+   rows: 4
+   cols: 4
+   dt: f
+   data: [1.0, 0.0, 0.0, 15.0,
+          0.0, 1.0, 0.0, 7.5,
+          0.0, 0.0, 1.0, 0.0,
+          0.0, 0.0, 0.0, 1.0]
 #--------------------------------------------------------------------------------------------
 # Stereo Rectification. Only if you need to pre-rectify the images.
 # Camera.fx, .fy, etc must be the same as in LEFT.P
@@ -88,7 +107,7 @@ RIGHT.P:  !!opencv-matrix
 #--------------------------------------------------------------------------------------------
 
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 1200
+ORBextractor.nFeatures: 1500
 
 # ORB Extractor: Scale factor between levels in the scale pyramid 	
 ORBextractor.scaleFactor: 1.2
