--- a/Examples/Monocular/EuRoC.yaml
+++ b/Examples/Monocular/EuRoC.yaml
@@ -26,6 +26,14 @@ tci: [-56.64203621,63.12893093,202.2751737]
 iGPS.Path: "../../data/MH01/MH01-iGPS-Direction.txt"
 iGPS.Channel: 1
 iGPS.RotationSpeed: 1800
+Twi: !!opencv-matrix
+   rows: 4
+   cols: 4
+   dt: f
+   data: [1.0, 0.0, 0.0, 0.0,
+          0.0, 1.0, 0.0, 0.0,
+          0.0, 0.0, 1.0, 0.0,
+          0.0, 0.0, 0.0, 1.0]
 
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
