--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ Examples/ROS/ORB_SLAM3/Stereo_Inertial
 
 Examples/ROS/ORB_SLAM3/CMakeLists.txt.user
 Examples/ROS/ORB_SLAM3/build/
-
+evaluation/MH_*
 KeyFrameTrajectory.txt
 CameraTrajectory.txt
 kf_*.txt
